<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#3F51B5"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/voltarTelaPrincipal"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:background="#3F51B5"
                    android:contentDescription="@string/todo"
                    app:srcCompat="?attr/actionModeCloseDrawable" />

                <TextView
                    android:id="@+id/editarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:text="@string/editar_tarefa"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="16dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/deleteBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:backgroundTint="#A50000"
                    android:contentDescription="TODO"
                    app:srcCompat="@android:drawable/ic_menu_delete"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/saveBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="#4CAF50"
                    android:contentDescription="TODO"
                    app:srcCompat="@android:drawable/ic_menu_save"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tituloLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/tituloPrincipal" />

                <EditText
                    android:id="@+id/tituloInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:hint="@string/tarefa"
                    android:inputType="text"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/descricaoLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/descricao" />

                <EditText
                    android:id="@+id/descricaoInput"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginHorizontal="16dp"
                    android:ems="10"
                    android:hint="@string/inputTarefa"
                    android:inputType="text"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/vencimento" />

                <EditText
                    android:id="@+id/dataInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="@string/data"
                    android:inputType="date"
                    android:minHeight="48dp" />
            </LinearLayout>

            <Button
                android:id="@+id/salvarBtn"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="#4CAF50"
                android:text="@string/salvar" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>